# dotbits

./: CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md
src/: bit_manip.rs  bit_vec.rs  error.rs  lib.rs  tests.rs
